[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon"
version = "0.1.6"
description = "Provider-agnostic edge compute SDK for AI workload routing"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["edge-compute", "ai", "routing", "inference", "llm", "openai", "gpu", "multi-provider", "akash", "ionet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13",
]

[project.optional-dependencies]
# Decentralised providers that use mnemonic / wallet-based auth
blockchain = [
    "eth-account>=0.12",
]
inference = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]
cli = [
    "questionary>=2.0",
]
aws = [
    "boto3>=1.34",
]
gcp = [
    "google-auth>=2.29",
    "google-auth-httplib2>=0.2",
]
azure = [
    "azure-identity>=1.16",
    "azure-mgmt-containerinstance>=10",
]
cloudflare = []   # httpx is already a core dependency
fly = []          # httpx is already a core dependency
all = [
    "axon[blockchain,inference,cli,aws,gcp,azure]",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
axon = "axon.cli.main:app"

[project.urls]
Homepage = "https://axon.dev"
Repository = "https://github.com/deyzho/axon"
Issues = "https://github.com/deyzho/axon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/axon"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
